# Yimage

./: CMakeLists.txt  CMakePresets.json  LICENSE
.github/workflows/: cmake.yml
cmake/emscripten/: FindJPEG.cmake  FindPNG.cmake
docs/: libpng-manual.txt
extras/: CMakeLists.txt
extras/float_image_to_png/: CMakeLists.txt  float_image_to_png.cpp
extras/jpg2png/: CMakeLists.txt  jpg2png.cpp
extras/tiffreader/: CMakeLists.txt  tiffreader.cpp
extras/transparent/: CMakeLists.txt  transparent.cpp
include/Yimage/: IImage.hpp  IMutImage.hpp  Image.hpp  ImageAlgorithms.hpp  ImageData.hpp  ImageMetadata.hpp  ImageView.hpp  MutImageView.hpp  MutableImageView.hpp  PixelType.hpp  PngInfo.hpp  PngMetadata.hpp  PngTransform.hpp  PngWriter.hpp  ReadImage.hpp  ReadJpeg.hpp  ReadPng.hpp  ReadTiff.hpp  Rgba8.hpp  TiffMetadata.hpp  WritePng.hpp  Yimage.hpp  YimageException.hpp
include/Yimage/Jpeg/: ReadJpeg.hpp
include/Yimage/Png/: PngMetadata.hpp  PngTransform.hpp  PngWriter.hpp  ReadPng.hpp  WritePng.hpp
include/Yimage/Tiff/: GeoTiffMetadata.hpp  ReadTiff.hpp  TiffMetadata.hpp
src/Yimage/: ColorBytes.cpp  ColorBytes.hpp  FileUtilities.hpp  IImage.cpp  IMutImage.cpp  Image.cpp  ImageAlgorithms.cpp  ImageMetadata.cpp  ImageUtilities.hpp  ImageView.cpp  MutImageView.cpp  MutableImageView.cpp  PixelType.cpp  PngInfo.cpp  PngMetadata.cpp  PngTransform.cpp  PngWriter.cpp  ReadImage.cpp  ReadJpeg.cpp  ReadOnlyStreamBuffer.hpp  ReadPng.cpp  ReadTiff.cpp  Rgba8.cpp  TiffMetadata.cpp  WritePng.cpp  YimageVersion.hpp.in
src/Yimage/Jpeg/: ReadJpeg.cpp
src/Yimage/Png/: PngMetadata.cpp  PngTransform.cpp  PngWriter.cpp  ReadPng.cpp  WritePng.cpp
src/Yimage/Tiff/: GeoTiffMetadata.cpp  OpenTiff.cpp  OpenTiff.hpp  ReadGeoTiffMetadata.cpp  ReadGeoTiffMetadata.hpp  ReadTiff.cpp  TiffMetadata.cpp
tests/YimageTest/: CMakeLists.txt  Images.hpp.in  Resources.cpp  Resources.hpp  YimageTestMain.cpp  test_ImageAlgorithms.cpp  test_ImageView.cpp  test_MutableImageView.cpp  test_ReadImage.cpp  test_ReadPng.cpp
